# moon

./: .gitignore  .gitreview  DEV.md  INFO  INFO.yaml  Jenkinsfile  README.md  README.rst  TODO  groups  project.config
dashboard/: README.md  package.json
moon_dashboard/: Dockerfile  MANIFEST.in  README.rst  run.sh  setup.cfg
moon_dashboard/moon/model/templates/model/: index.html
moon_dashboard/moon/pdp/: panel.py
moon_dashboard/moon/pdp/templates/pdp/: index.html
moon_dashboard/moon/policy/: urls.py  views.py
moon_dashboard/moon/static/moon/js/: import.service.js  moon.module.js  util.service.js
moon_dashboard/moon/static/moon/model/: model.controller.js  model.html  model.service.js  model.service.spec.js
moonclient/: Changelog  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
moonclient/moonclient/: action_assignments.py  action_categories.py  action_category_scope.py  action_scopes.py  actions.py  authz_policies.py  configuration.py  intraextension.py  logs.py  metarules.py  object_assignments.py  object_categories.py  object_category_scope.py  object_scopes.py  objects.py  rules.py  shell.py  subject_assignments.py  subject_categories.py  subject_category_scope.py  subject_scopes.py  subjects.py  tenants.py  tests.py
moonclient/moonclient/tests/: functional_tests.sh  tests_action_assignments.json  tests_action_categories.json  tests_action_scopes.json  tests_actions.json  tests_admin_intraextensions.json  tests_change_auth.json  tests_configuration.json  tests_empty_policy.json  tests_empty_policy_new_user.json  tests_empty_policy_nova.json  tests_empty_policy_swift.json  tests_external_commands.json  tests_intra_extensions.json  tests_object_assignments.json  tests_object_categories.json  tests_object_scopes.json  tests_objects.json  tests_root_intraextensions.json  tests_rules.json  tests_subject_assignments.json  tests_subject_categories.json  tests_subject_scopes.json  tests_subjects.json  tests_submetarules.json  tests_tenants.json
moonclient/moonclient/tests/todo/: tests_empty_policy_nova.json  tests_empty_policy_swift.json
moonclient/python_moonclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
(+1735 files in other folders)
