[metadata]
name = moon
version=1.2.0
summary = A dashboard plugin for Moon
description-file =
    README.rst
author = Jonathan Gourdin
author_email = jonathan.gourdin@orange.com
home-page = https://docs.openstack.org/horizon/latest/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    moon