[metadata]
name = moonclient
summary = Python client for the Moon API
description-file =
    README.rst
author = Orange
author-email = thomas.duval@orange.com
home-page = http://orange.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    moonclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    openstack = moonclient.shell:main

openstack.cli.base =
    intraextension = moonclient.intraextension:IntraExtension

;[build_sphinx]
;source-dir = doc/source
;build-dir = doc/build
;all_files = 1
;
;[upload_sphinx]
;upload-dir = doc/build/html
;
;[compile_catalog]
;directory = moonclient/locale
;domain = moonclient
;
;[update_catalog]
;domain = moonclient
;output_dir = moonclient/locale
;input_file = moonclient/locale/moonclient.pot
;
;[extract_messages]
;keywords = _ gettext ngettext l_ lazy_gettext
;mapping_file = babel.cfg
;output_file = moonclient/locale/moonclient.pot
;
[wheel]
universal = 1
